--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
-        "laraveles/spanish": "^1.5"
+        "laraveles/spanish": "^1.5",
+        "merujan99/laravel-video-embed": "dev-master",
+        "cohensive/embed": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
